{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 253,
  "lineage": "50664e1a-46f0-02bd-7343-7c66713a69e2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "stack_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-02f2c262bfc08697c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492048000:subnet/subnet-02f2c262bfc08697c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f2c262bfc08697c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492048000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0b16376d2cbed43aa"
          }
        },
        {
          "index_key": "subnet-04deb661ac66ba4e6",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492048000:subnet/subnet-04deb661ac66ba4e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04deb661ac66ba4e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492048000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0b16376d2cbed43aa"
          }
        },
        {
          "index_key": "subnet-0603ede3c2a289ac8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492048000:subnet/subnet-0603ede3c2a289ac8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4079,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0603ede3c2a289ac8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492048000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0b16376d2cbed43aa"
          }
        },
        {
          "index_key": "subnet-0654326ffc23e2e55",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492048000:subnet/subnet-0654326ffc23e2e55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4082,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0654326ffc23e2e55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492048000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0b16376d2cbed43aa"
          }
        },
        {
          "index_key": "subnet-0918a43a58a8a01be",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492048000:subnet/subnet-0918a43a58a8a01be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0918a43a58a8a01be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492048000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0b16376d2cbed43aa"
          }
        },
        {
          "index_key": "subnet-0b1720eacf1056482",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492048000:subnet/subnet-0b1720eacf1056482",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1720eacf1056482",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492048000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0b16376d2cbed43aa"
          }
        }
      ]
    },
    {
      "module": "module.EC2-BASE",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f14bd2c5fcc7e69",
            "arn": "arn:aws:ec2:us-east-1:381492048000:instance/i-016865f16ffeb3355",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016865f16ffeb3355",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkpp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0066e69a89c01dd45",
            "private_dns": "ip-172-31-95-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.95.168",
            "public_dns": "ec2-18-212-27-136.compute-1.amazonaws.com",
            "public_ip": "18.212.27.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:381492048000:key/4a3e613b-969a-4d57-a57a-4126c23181a4",
                "throughput": 0,
                "volume_id": "vol-0acfd438a385780e8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "stack_web_D"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f2c262bfc08697c",
            "tags": {
              "Name": "Application-Server"
            },
            "tags_all": {
              "Name": "Application-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0823ef2e46e58a21e"
            ]
          },
          "dependencies": [
            "data.aws_ami.stack_ami",
            "module.EC2-BASE.aws_key_pair.Stack_KP",
            "module.EC2-BASE.aws_security_group.stack-sg",
            "module.EC2-BASE.data.template_file.bootstrap"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-BASE",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stack-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492048000:security-group/sg-0823ef2e46e58a21e",
            "description": "Stack IT Security Group For CliXX System",
            "egress": [],
            "id": "sg-0823ef2e46e58a21e",
            "ingress": [],
            "name": "stack_web_D",
            "name_prefix": "",
            "owner_id": "381492048000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b16376d2cbed43aa"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.EC2-BASE",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4176201579",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0823ef2e46e58a21e",
            "security_group_rule_id": "sgr-06fe5efd8e3133097",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EC2-BASE.aws_security_group.stack-sg"
          ]
        }
      ]
    }
  ]
}